# template_autoresearch_project

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  _combined_manuscript.md  autoresearch.yaml  codemeta.json  domain_profile.yaml  experiment_plan.yaml  figures.yaml  human_review.yaml  manuscript__00_abstract.html  manuscript__01_introduction.html  manuscript__02_methodology.html  manuscript__04_conclusion.html  manuscript__99_references.html  mnist_task.yaml  program.md  pyproject.toml  seed_ideas.yaml
data/: AGENTS.md  README.md  claim_ledger.yaml  mnist_small.npz  mnist_small_provenance.json
docs/: AGENTS.md  README.md  agent_instructions.md  configuration.md  outputs.md  runbook.md  troubleshooting.md  validation-architecture.md
manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  04_conclusion.md  AGENTS.md  README.md  config.yaml  config.yaml.example  layer_contract.yaml  source_ledger.yaml
scripts/: AGENTS.md  README.md  _bootstrap.py  check_source_ledger.py  regenerate_mnist_fixture.py  run_autoresearch_loop.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  __init__.py  artifact_content.py  artifact_loader.py  artifact_schemas.py  config.py  json_coerce.py  loop.py  loop_phases.py  manuscript_variables.py  models.py  phase_ledger.py  reports.py  research_object.py  source_ledger.py
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_artifact_schemas.py  test_config.py  test_edge_cases.py  test_edge_config.py  test_edge_gates.py  test_edge_ledger.py  (+15 more)
(+202 files in other folders)
