[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template_autoresearch_project"
version = "0.3.2"
description = "Deterministic bounded AutoResearch ML-loop exemplar for the template repository."
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "matplotlib>=3.7", "pyyaml>=6.0"]

[tool.pytest.ini_options]
# Project lives at projects/templates/<name>/; the repo root (which holds
# `infrastructure/`) is three levels up, so the documented per-project pytest
# command resolves `infrastructure` without an externally supplied PYTHONPATH.
pythonpath = ["../../..", ".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
